--- a/public/index.html
+++ b/public/index.html
@@ -24,19 +24,19 @@
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jquery.countdown.min.js"></script>
-    <script src="/js/jquery.nice-select.min.js"></script>
+    <!-- <script src="/js/jquery.nice-select.min.js"></script> -->
     <script src="/js/jquery.nicescroll.min.js"></script>
-    <script src="/js/slick.min.js"></script>
     <script src="/js/biolife.framework.js"></script>
     <script src="/js/vendor.js"></script>
     <script src="/js/jsvectormap.min.js"></script>
     <script src="/js/world-merc.js"></script>
     <script src="/js/world.js"></script>
     <script src="/js/pagecustom.js"></script>
+    <script src="/js/custom.js"></script>
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.8/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
-    <!-- <script src="/js/custom.js"></script> -->
+   
     
   </body>
 </html>
